Ready to deploy

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="main">
       <div>
         <div class="logo">
-          <img src="./assests/GNL_logo.png" alt="" />
+          <img src="./assests/GNL_logo1.png" alt="" />
         </div>
         <div class="wifi">
           <h1>Free WiFi</h1>
